# kenz-supermarket

./: .gitignore  .hintrc  .prettierignore  .prettierrc  AGENTS.md  components.json  electron-builder.yml  errors.txt  eslint.config.js  index.html  package-lock.json  package.json  roadmap.md  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
backend/: .env.example  pyproject.toml  requirements.txt
backend/apps/accounts/: apps.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/apps/audit/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/billing/: apps.py  models.py
backend/apps/core/: apps.py  exceptions.py  middleware.py  mixins.py  models.py  permissions.py  urls.py  views.py
backend/apps/customers/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/expenses/: apps.py  models.py  serializers.py  views.py
backend/apps/inventory/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/promotions/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/purchasing/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/realtime/: apps.py  consumers.py  routing.py  signals.py
backend/apps/reports/: apps.py  urls.py  views.py
backend/apps/sales/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/settings_app/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/stock/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/stores/: apps.py  models.py  (+3 more)
backend/config/: asgi.py  urls.py  wsgi.py
(+336 files in other folders)
